2006-02-11  Callum McKenzie  <callum@spooky-possum.org>

	* rules/yukon.scm (check-a-tableau): Recursive checks for
	secondary moves were terminating early producing cases like bug
	#330616. Removed the immbedded? flag since I don't think it is
	actually needed.

2006-02-09  Callum McKenzie  <callum@spooky-possum.org>

	* rules/kings_audience.scm: Patch from Zack Keene to fix a slight
	opportunity to cheat.

2006-02-06  Callum McKenzie  <callum@spooky-possum.org>

	* sol.c:
	* menu.c: Make the result of game_name_to_file translatable. This
	should make sure that the game names are translated properly
	everywhere by doing the translation when the string is created.

2006-02-05  Callum McKenzie  <callum@spooky-possum.org>

	* rules/diamond_mine.scm (button-released): Patch from Vincent
	Povirk to fix bug #329393. The bug stopped complete stacks of 13
	cards being moved.

2006-01-25  Callum McKenzie  <callum@spooky-possum.org>

	* dialog.c: Moved the exclamation marks in the winning dialog to
	be more appropriate (see bug #324613).

2006-01-24  Callum McKenzie  <callum@spooky-possum.org>

	* rules/ten_across.scm: Fix DOS CR/LF line endings.

2006-01-17  Callum McKenzie  <callum@spooky-possum.org>

	* sol.c (main_prog): Make sure user-defined accelerators are
	saved.

2006-01-16  Callum McKenzie  <callum@spooky-possum.org>

	* rules/Makefile.am: 
	* rules/aunt_mary.scm:
	* translatable_names.h: New game from Alan Horkan: Aunt Mary.

	* rules/golf.scm: A distilled version of Alan Horkan's cleanups
	from bug #325038. None of the support for Putt Putt though.

	* rules/osmosis.scm:
	* rules/peek.scm: Patch from Zach Keene to add three card deals
	and to make peek inherit from osmosis. Bug #32028.

2006-01-01  Callum McKenzie  <callum@spooky-possum.org>

	* rules/gaps.scm: Patch from Zach Keene to add an option to shuffle
	the gaps on a redeal.

2005-12-28  Callum McKenzie  <callum@spooky-possum.org>

	* events.c (button_press_event): Make the middle button a